--- a/sections/productos.html
+++ b/sections/productos.html
@@ -26,18 +26,20 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/styles.css">
 
-    <!-- JS -->
-    <script src="../assets/js/main.js"></script>
-
-
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
-    <title>PRODUCTO</title>
+    <link rel="shortcut icon" href="../assets/images/letras/logo.webp" type="image/x-icon">
+    <title>FLOW 3D</title>
 
 </head>
 
 <body>
 
-    <header>
+    <div class="alert alert-warning alert-dismissible fade show m-0 anuncios-header" role="alert">
+        <strong>BIENVENIDO!</strong> ACTUALMENTE LA TIENDA SE ENCUENTRA EN CONSTRUCCIÓN.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
+            onclick="cerrarAnuncio();"></button>
+    </div>
+
+    <header id="header">
         <nav>
             <ul>
                 <li><a href="#"><img src="../assets/images/logo.png" alt="logo">
@@ -92,13 +94,12 @@
                 <div class="contenedor-producto">
 
                     <div class="contenedor-texto">
-                        <h1 class="titulo-producto">Soporte Celular</h1>
-                        <h2 class="subtitulo-producto">Práctico.⠀Liviano.⠀Resistente.
-                        </h2>
+                        <h2 class="titulo-producto">Soporte Celular</h2>
+                        <h3 class="subtitulo-producto">Práctico.⠀Liviano.⠀Resistente.
+                        </h3>
 
                         <button type="button" class="btn btn-primary rounded-5 mb-4 mt-5">Comprar artículo</button>
-                        <a href="#"
-                            style="text-decoration: none; font-family: 'SF', sans-serif; font-size: 21px;">Explorar
+                        <a href="#" class="enlace-decorado">Explorar
                             modelos similares ></a>
                     </div>
 
@@ -109,12 +110,12 @@
                 <div class="contenedor-producto">
 
                     <div class="contenedor-texto">
-                        <h1 class="titulo-producto">Portavasos</h1>
-                        <h2 class="subtitulo-producto">Util.⠀Portatil.⠀Compacto.</h2>
+                        <h2 class="titulo-producto">Portavasos</h2>
+                        <h3 class="subtitulo-producto">Util.⠀Portatil.⠀Compacto.
+                        </h3>
 
                         <button type="button" class="btn btn-primary rounded-5 mb-4 mt-5">Comprar artículo</button>
-                        <a href="#"
-                            style="text-decoration: none; font-family: 'SF', sans-serif; font-size: 21px;">Explorar
+                        <a href="#" class="enlace-decorado">Explorar
                             modelos similares ></a>
                     </div>
 
@@ -125,13 +126,12 @@
                 <div class="contenedor-producto">
 
                     <div class="contenedor-texto">
-                        <h1 class="titulo-producto">Soporte control PS</h1>
-                        <h2 class="subtitulo-producto">Pequeño.⠀Discreto.⠀Personalizable.
-                        </h2>
+                        <h2 class="titulo-producto">Soporte control PS</h2>
+                        <h3 class="subtitulo-producto">Pequeño.⠀Discreto.⠀Personalizable.
+                        </h3>
 
                         <button type="button" class="btn btn-primary rounded-5 mb-4 mt-5">Comprar artículo</button>
-                        <a href="#"
-                            style="text-decoration: none; font-family: 'SF', sans-serif; font-size: 21px;">Explorar
+                        <a href="#" class="enlace-decorado">Explorar
                             modelos similares ></a>
                     </div>
 
@@ -142,13 +142,12 @@
                 <div class="contenedor-producto">
 
                     <div class="contenedor-texto">
-                        <h1 class="titulo-producto">Tope Puerta</h1>
-                        <h2 class="subtitulo-producto">Freno.⠀Anticierre.⠀Suave.
-                        </h2>
+                        <h2 class="titulo-producto">Tope Puerta</h2>
+                        <h3 class="subtitulo-producto">Freno.⠀Anticierre.⠀Suave.
+                        </h3>
 
                         <button type="button" class="btn btn-primary rounded-5 mb-4 mt-5">Comprar artículo</button>
-                        <a href="#"
-                            style="text-decoration: none; font-family: 'SF', sans-serif; font-size: 21px;">Explorar
+                        <a href="#" class="enlace-decorado">Explorar
                             modelos similares ></a>
                     </div>
 
@@ -160,13 +159,12 @@
                 <div class="contenedor-producto">
 
                     <div class="contenedor-texto">
-                        <h1 class="titulo-producto">Artículos Medicina</h1>
-                        <h2 class="subtitulo-producto">Personalizable.⠀A medida.⠀A pedido.
-                        </h2>
+                        <h2 class="titulo-producto">Artículos Medicina</h2>
+                        <h3 class="subtitulo-producto">Personalizable.⠀A medida.⠀A pedido.
+                        </h3>
 
                         <button type="button" class="btn btn-primary rounded-5 mb-4 mt-5">Ordenar pieza</button>
-                        <a href="#"
-                            style="text-decoration: none; font-family: 'SF', sans-serif; font-size: 21px;">Explorar
+                        <a href="#" class="enlace-decorado">Explorar
                             modelos ></a>
                     </div>
 
@@ -178,13 +176,13 @@
                 <div class="contenedor-producto">
 
                     <div class="contenedor-texto">
-                        <h1 class="titulo-producto">Ordená tu propia pieza</h1>
-                        <h2 class="subtitulo-producto">Personalizable.⠀A medida.⠀100%
+                        <h2 class="titulo-producto">Ordená tu propia pieza</h2>
+                        <h3 class="subtitulo-producto">Personalizable.⠀A medida.⠀100%
                             tuyo.
-                        </h2>
+                        </h3>
 
                         <button type="button" class="btn btn-primary rounded-5 mb-4 mt-5">Ordenar pieza</button>
-                        <a href="#" style="text-decoration: none; font-family: 'SF', sans-serif; font-size: 21px;">Ver
+                        <a href="#" class="enlace-decorado">Ver
                             opciones ></a>
                     </div>
 
@@ -202,7 +200,51 @@
         </button>
     </div>
 
+    <footer>
+        <hr>
+        <nav class="mb-3 mt-3">
+            <ul>Navegación
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./productos.html">Productos</a></li>
+                <li><a href="./sobre_nosotros.html">Sobre nosotros</a></li>
+                <li><a href="./seguimiento.html">Seguimiento</a></li>
+                <li><a href="./ayuda.html">Ayuda</a></li>
+            </ul>
+
+            <ul>Contactanos
+                <li><a href="#"><i class="fa-solid fa-phone"></i> 11-4975-8634</a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope"></i> agusmayolitos@gmail.com</a></li>
+                <li><a href="#"><i class="fa-solid fa-location-dot"></i> Avenida siempreviva 220</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#"><i class="fa-regular fa-circle-dot"></i> Botón de arrepentimiento</a></li>
+                <li><a href="#"><i class="fa-solid fa-credit-card"></i> Métodos de pago</li>
+                <li><a href="#"><i class="fa-solid fa-info"></i> Terminos y Condiciones</a></li>
+                <ul>Newsletter
+
+                    <li>
+                        <div class="input-group">
+                            <div class="form-floating">
+                                <input type="mail" class="form-control p-2" id="floatingInputGroup1"
+                                    placeholder="your_email@example.com" style="width: auto; height: 40px;">
+                                <label for="floatingInputGroup1" class="p-2">Mail</label>
+                            </div>
+                            <span class="input-group-text"><a href="#"><i
+                                        class="fa-solid fa-paper-plane"></i></a></span>
+                        </div>
+                    </li>
+
+                </ul>
+            </ul>
+        </nav>
+        <hr>
+    </footer>
+
     <!-- SCRIPTS -->
+
+    <!-- JS -->
+    <script src="../assets/js/main.js"></script>
 
     <!-- AOS ANIMATIONS SCRIPT -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
