--- a/index.html
+++ b/index.html
@@ -26,21 +26,26 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
 
-    <!-- JS -->
-    <script src="./assets/js/main.js"></script>
 
-
-    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <title>F L O W K E R S</title>
+    <link rel="shortcut icon" href="./assets/images/letras/logo.webp" type="image/x-icon">
+    <title>FLOW 3D</title>
 
 </head>
 
 <body>
 
-    <header>
+    <div class="alert alert-warning alert-dismissible fade show m-0 anuncios-header" role="alert">
+        <strong>BIENVENIDO!</strong> ACTUALMENTE LA TIENDA SE ENCUENTRA EN CONSTRUCCIÓN.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" id="boton_cerrar_anuncio"
+            onclick="cerrarAnuncio();"></button>
+    </div>
+
+    <header id="header">
+
         <nav>
             <ul>
-                <li><a href="#"><img src="../assets/images/logo.png" alt="logo">
+                <li><a href="#"><img id="logo" style="visibility: hidden; opacity: 0;" src="./assets/images/logo.png"
+                            alt="logo">
                     </a></li>
             </ul>
             <ul>
@@ -83,7 +88,200 @@
         </nav>
     </header>
 
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="contenedor-producto mb-5">
+
+                    <div class="contenedor-texto">
+                        <img style="width: 30rem;" src="./assets/images/logo.png" alt="">
+
+                        <h3 class="subtitulo-producto">Vos pedinos, que nosotros imprimimos.</h3>
+                        <p>Cubrimos tus necesidades al 100%. Creá todo lo que te imagines.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container text-center mt-5">
+        <div class="row row-cols-5 justify-content-between align-items-center">
+            <div class="col" style="width: 20rem;">
+
+                <div class="d-flex justify-content-between align-items-start text-start">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#212529" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+                        <path
+                            d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+                    </svg>
+
+                    <div class="d-flex flex-column justify-content-center align-items-start ms-2">
+                        <strong>CONTACTANOS!</strong>
+                        <p>Podes hablarnos por instagram o WhatsApp al: 11-4975-8634</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col" style="width: auto; height: auto;">
+                <div class="vr" style="background-color: black; height: 50px;"></div>
+            </div>
+
+            <div class="col" style="width: 20rem;">
+                <div class="d-flex justify-content-between align-items-start text-start">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#212529" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <circle cx="6" cy="19" r="2" />
+                        <circle cx="17" cy="19" r="2" />
+                        <path d="M17 17h-11v-14h-2" />
+                        <path d="M6 5l14 1l-1 7h-13" />
+                    </svg>
+                    <div class="d-flex flex-column justify-content-center align-items-start ms-2">
+                        <strong>ENVÍOS GRATIS</strong>
+                        <p>En Capital Federal. Envíos al interior no disponible.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col" style="width: auto; height: auto;">
+                <div class="vr" style="background-color: black; height: 50px;"></div>
+            </div>
+
+            <div class="col" style="width: 20rem;">
+                <div class="d-flex justify-content-between align-items-start text-start">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="#212529" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <line x1="9" y1="15" x2="15" y2="9" />
+                        <circle cx="9.5" cy="9.5" r=".5" fill="currentColor" />
+                        <circle cx="14.5" cy="14.5" r=".5" fill="currentColor" />
+                        <path
+                            d="M5 7.2a2.2 2.2 0 0 1 2.2 -2.2h1a2.2 2.2 0 0 0 1.55 -.64l.7 -.7a2.2 2.2 0 0 1 3.12 0l.7 .7a2.2 2.2 0 0 0 1.55 .64h1a2.2 2.2 0 0 1 2.2 2.2v1a2.2 2.2 0 0 0 .64 1.55l.7 .7a2.2 2.2 0 0 1 0 3.12l-.7 .7a2.2 2.2 0 0 0 -.64 1.55v1a2.2 2.2 0 0 1 -2.2 2.2h-1a2.2 2.2 0 0 0 -1.55 .64l-.7 .7a2.2 2.2 0 0 1 -3.12 0l-.7 -.7a2.2 2.2 0 0 0 -1.55 -.64h-1a2.2 2.2 0 0 1 -2.2 -2.2v-1a2.2 2.2 0 0 0 -.64 -1.55l-.7 -.7a2.2 2.2 0 0 1 0 -3.12l.7 -.7a2.2 2.2 0 0 0 .64 -1.55v-1" />
+                    </svg>
+                    <div class="d-flex flex-column justify-content-center align-items-start ms-2">
+                        <strong>EL PRECIO MÁS BAJO</strong>
+                        <p>Artículos sin grandes costos de producción, ni mano de obra.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container text-center mt-5">
+        <div class="row row-cols-2 gy-5">
+            <div class="col mb-5">
+                <h2 class="mt-5">Ordená tu propia pieza</h3>
+                    <span>Envianos el modelo o tu idea y la hacemos realidad.</span>
+
+                    <div class="d-flex justify-content-center align-items-center mt-3">
+                        <a href="#" class="enlace-decorado me-5">Leer
+                            más ></a>
+                        <a href="#" class="enlace-decorado">Ordenar
+                            ></a>
+                    </div>
+
+                    <img class=" mt-5 foto-producto" src="./assets/images/propia_pieza.png" alt="">
+            </div>
+            <div class="col mb-5">
+                <h2 class="mt-5">¿Estudiás medicina?</h3>
+                    <span>Nosotros te la hacemos facil.</sp>
+
+                        <div class="d-flex justify-content-center align-items-center mt-3">
+                            <a href="#" class="enlace-decorado me-5">Leer
+                                más ></a>
+                            <a href="#" class="enlace-decorado">Ordenar
+                                ></a>
+                        </div>
+
+                        <img class=" mt-5 foto-producto" src="./assets/images/medicina.png" alt="">
+            </div>
+            <div class="col mb-5">
+                <h2 class="mt-5">Explorá lo más solicitado</h3>
+                    <span>Artículos funcionales, listos para imprimir.</span>
+
+                    <div class="d-flex justify-content-center align-items-center mt-3">
+                        <a href="#" class="enlace-decorado me-5">Leer
+                            más ></a>
+                        <a href="#" class="enlace-decorado">Ordenar
+                            ></a>
+                    </div>
+
+                    <img class="mt-5 foto-producto" src="./assets/images/soporte_cel.png" alt="">
+            </div>
+            <div class="col mb-5">
+                <h2 class="mt-5">¿Te quedaron dudas?</h3>
+                    <span>Te invitamos a leer nuestro canal de ayuda.</span>
+
+                    <div class="d-flex justify-content-center align-items-center mt-3">
+                        <a href="#" class="enlace-decorado me-5">Leer
+                            más ></a>
+                        <a href="#" class="enlace-decorado">Ordenar
+                            ></a>
+                    </div>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="mt-5 foto-producto" style="opacity: .2;" width="24"
+                        height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#212529" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <circle cx="12" cy="12" r="9" />
+                        <line x1="12" y1="17" x2="12" y2="17.01" />
+                        <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
+                    </svg>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <hr>
+        <nav class="mb-3 mt-3">
+            <ul>Navegación
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./sections/productos.html">Productos</a></li>
+                <li><a href="./sections/sobre_nosotros.html">Sobre nosotros</a></li>
+                <li><a href="./sections/seguimiento.html">Seguimiento</a></li>
+                <li><a href="./sections/ayuda.html">Ayuda</a></li>
+            </ul>
+
+            <ul>Contactanos
+                <li><a href="#"><i class="fa-solid fa-phone"></i> 11-4975-8634</a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope"></i> agusmayolitos@gmail.com</a></li>
+                <li><a href="#"><i class="fa-solid fa-location-dot"></i> Avenida siempreviva 220</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#"><i class="fa-regular fa-circle-dot"></i> Botón de arrepentimiento</a></li>
+                <li><a href="#"><i class="fa-solid fa-credit-card"></i> Métodos de pago</li>
+                <li><a href="#"><i class="fa-solid fa-info"></i> Terminos y Condiciones</a></li>
+                <ul>Newsletter
+
+                    <li>
+                        <div class="input-group">
+                            <div class="form-floating">
+                                <input type="mail" class="form-control p-2" id="floatingInputGroup1"
+                                    placeholder="your_email@example.com" style="width: auto; height: 40px;">
+                                <label for="floatingInputGroup1" class="p-2">Mail</label>
+                            </div>
+                            <span class="input-group-text"><a href="#"><i
+                                        class="fa-solid fa-paper-plane"></i></a></span>
+                        </div>
+                    </li>
+
+                </ul>
+            </ul>
+        </nav>
+        <hr>
+    </footer>
+
     <!-- SCRIPTS -->
+
+    <!-- JS -->
+    <script src="./assets/js/main.js"></script>
 
     <!-- AOS ANIMATIONS SCRIPT -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
